--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "guestportalbackend",
   "version": "1.0.0",
   "description": "",
+  
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  
   },
   "author": "",
   "license": "ISC",
